Don't allow ALTER TABLE ... ORDER BY on SEQUENCE objects

MDEV-19320 Sequence gets corrupted and produces ER_KEY_NOT_FOUND
           (Can't find record) after ALTER .. ORDER BY